# llvm_sarvavid

./: .gitattributes  CMakeLists.txt  LICENSE  Makefile  README.md
SarvLibrary/: CMakeLists.txt  MakeChecks.cpp  SarvSettings.sarv
SarvLibrary/Clustering/: clustering.cpp  clustering.h
SarvLibrary/ErrorCorrection/: CMakeLists.txt  errCorrection.cpp  errCorrection.h
SarvLibrary/ErrorCorrection/LoRDEC/: CMakeLists.txt
SarvLibrary/ErrorCorrection/LoRDEC/test/: test-lordec.sh
SarvLibrary/ErrorCorrection/LoRDEC/test/DATA/: ill-test-5K-1.fa  ill-test-5K-2.fa  my2-ill-test-files.txt
SarvLibrary/ErrorCorrection/LoRDEC/tools/: CMakeLists.txt
SarvLibrary/ErrorCorrection/LoRDEC/tools/lordec-build-SR-graph/src/: lordec-build-SR-graph.cpp  lordec-gen.hpp
SarvLibrary/ErrorCorrection/LoRDEC/tools/lordec-correct/src/: lordec-correct.cpp
SarvLibrary/ErrorCorrection/LoRDEC/tools/lordec-stat/src/: lordec-stat.cpp
SarvLibrary/ErrorCorrection/LoRDEC/tools/lordec-trim-split/src/: lordec-trim-split.cpp
SarvLibrary/ErrorCorrection/LoRDEC/tools/lordec-trim/src/: lordec-trim.cpp
SarvLibrary/ErrorCorrection/bloocoo/sam_stats/test/: read_cor.fa  read_uncor.fa  ref.fa
SarvLibrary/ErrorCorrection/bloocoo/test/: errclose.h5  errclose_bloocoo_corr_errs_full.tab  errclose_corrected.fasta
SarvLibrary/ErrorCorrection/coral/: Makefile  README  coral  define.h  error-correct.c  multi-align.c  multi-align.h  q-gram-index-ht.c  q-gram-index-ht.h  reverse.c  reverse.h
SarvLibrary/ErrorCorrection/rcorrector/: rcorrector
SarvLibrary/GraphConstruction/: CMakeLists.txt  graphConst.cpp  graphConst.h
SarvLibrary/GraphConstruction/Havec/: CMakeLists.txt  Havec  Havec.out
SarvLibrary/GraphConstruction/Havec/input_files/: sequential.fa  shortfile.fa
SarvLibrary/GraphConstruction/bcalm/example/: tiny_read.fa
SarvLibrary/GraphConstruction/bcalm/example/pufferize/: refs.fa
SarvLibrary/GraphConstruction/bcalm/gatb-core/gatb-core/test/db/: microsnp.fa  query.fa  sample1.fa
SarvLibrary/GraphConstruction/bcalm/test/: minitip.fa
SarvLibrary/GraphTraversal/: graphTrav.cpp  graphTrav.h
SarvLibrary/GraphTraversal/minia/: dummy.h5  ecoliFixed.contigs.fa  ecoliFixed.h5  ecoliFixed.unitigs.fa  ecoliFixed.unitigs.fa.glue
SarvLibrary/GraphTraversal/minia/merci/test-loop/: assembly.fa  reads.fa
SarvLibrary/GraphTraversal/minia/merci/test-simple/: assembly.fa  reads.fa
SarvLibrary/GraphTraversal/minia/src/: Minia.cpp
SarvLibrary/GraphTraversal/minia/test/: 1seq.fa  1seq_90bp.fa  1seq_90bp_circ.fa  X.solution.fa  X.unitigs.fa  X.unitigs.fa.glue  X.unitigs.fa.glue.7  bubble.fa  bubble.solution.fa  bubble.unitigs.fa  bubble.unitigs.fa.glue  bubble.unitigs.fa.glue.0  bubble.unitigs.fa.glue.1  bubble.unitigs.fa.glue.2  bubble.unitigs.fa.glue.7  dummy.unitigs.fa  dummy.unitigs.fa.glue  dummy.unitigs.fa.glue.7  ec.fa  ec.solution.fa  ec.unitigs.fa  ec.unitigs.fa.glue  ec.unitigs.fa.glue.0  ec.unitigs.fa.glue.1  ec.unitigs.fa.glue.2  ec.unitigs.fa.glue.3  ec.unitigs.fa.glue.4  ec.unitigs.fa.glue.7  high_abundance.fa  read50x_ref10K_e001.fa  tip.fa  tip.solution.fa  tip.unitigs.fa  tip.unitigs.fa.glue  tip.unitigs.fa.glue.0  tip.unitigs.fa.glue.1  tip.unitigs.fa.glue.7
SarvLibrary/IndexGeneration/: indexGen.cpp  indexGen.h
SarvLibrary/IndexLookup/: indexLookup.cpp  indexLookup.h
SarvLibrary/Kmerize/: CMakeLists.txt  kmerLocations.cu  kmerLocations.h  kmerize.cpp  kmerize.h
SarvLibrary/Kmerize/dsk/: CMakeLists.txt
SarvLibrary/Kmerize/dsk/utils/: dsk2ascii.cpp
SarvLibrary/Kmerize/gpuCounting/: .cproject  .project  CMakeLists.txt  Makefile  README.md  cuda128t256t.h  kmer_less14  kmer_less14_opt.cu  noError.cu
SarvLibrary/Kmerize/gpuLocations/: CMakeLists.txt  Makefile  README.md  kmerLocations.cu  kmerLocations.h  kmerLocs14
SarvLibrary/SimilarityComputation/: simularityComp.cpp  simularityComp.h
SarvLibrary/Utilities/: CMakeLists.txt  IO.cpp  IO.h  cuda128t256t.h  cuda_utils.h  types.h
SarvLibrary/Utilities/idba_src/assembly/: assembly_utility.cpp  assembly_utility.h  local_assembler.cpp  local_assembler.h
SarvLibrary/Utilities/idba_src/basic/: kmer.h  math.cpp
SarvLibrary/Utilities/idba_src/chris/: idba_ud.cpp  idba_ud.h
SarvLibrary/Utilities/idba_src/container/: hash_map.h  hash_set.h  hash_table.h  managed_list.h
SarvLibrary/Utilities/idba_src/graph/: bit_edges.h  contig_builder.h  contig_graph.cpp  contig_graph.h  contig_graph_branch_group.cpp  contig_graph_branch_group.h  contig_graph_path.h  contig_graph_vertex.h  contig_info.cpp  contig_info.h  hash_graph.cpp  hash_graph.h  hash_graph_branch_group.h  hash_graph_path.h  hash_graph_vertex.h  scaffold_graph.cpp  scaffold_graph.h  scaffold_graph_path.h  scaffold_graph_vertex.h  vertex_status.h
SarvLibrary/Utilities/idba_src/misc/: blat_record.cpp  hash_aligner.cpp  hash_aligner.h  log.cpp  options_description.cpp  utils.cpp
SarvLibrary/Utilities/idba_src/release/: filterfa.cpp  fq2fa.cpp  idba.cpp  idba_hybrid.cpp  idba_tran.cpp  idba_ud.cpp  parallel_blat.cpp  raw_n50.cpp  sim_reads.cpp  sim_reads_tran.cpp  split_scaffold.cpp  validate_contigs_blat.cpp
SarvLibrary/Utilities/idba_src/sequence/: compact_sequence.cpp  read_library.h  sequence.cpp  sequence_io.cpp  sequence_io.h  sequence_reader.cpp  sequence_writer.cpp  short_sequence.cpp
SarvPass/: CMakeLists.txt  Sarvavid.cpp
SarvPass/optimizations/: Optimizations.cpp  Optimizations.h  commonSubExElimination.cpp  funcVersionSelection.cpp  loopFusion.cpp  loopInvarCodeMotion.cpp
SarvPass/utilities/: CommonTypes.h  FunctionDefUseChain.cpp  FunctionDefUseChain.h  LoopCondition.cpp  LoopCondition.h  MemoryDependence.cpp  MemoryDependence.h  ProgramDefUseChain.cpp  ProgramDefUseChain.h  ProgressBar.cpp  ProgressBar.h  Utility.cpp  Utility.h
Tests/: blastTest.cpp  blastTest2.cpp  chrisAssembly.cpp  ememTest.cpp  licmTest.cpp  mumTest.cpp  oldChrisBlastTest.cpp  simpleTest.cpp
Tests/OldTests/: sarv_blast_noopt.cpp  sarv_blast_opt.cpp  sarv_emem.cpp  sarv_sga.cpp  sarv_spades.cpp  sarvavidBlast.sarv  translated_blast_noopt.cpp  translated_blast_opt.cpp  (+5 more)
